--- a/unit_4 /css/style.css
+++ b/unit_4 /css/style.css
@@ -1,1 +1,12 @@
-style.css
+body {
+	
+	background: url("http://i.imgur.com/76zW7PT.jpg");
+    background-size: cover;
+    font-size: 16px;
+}
+
+h1 {
+
+	font-size: 10em; 
+
+}
