--- a/unit_4 /css/style.css
+++ b/unit_4 /css/style.css
@@ -8,16 +8,19 @@ body {
 	background: url("http://i.imgur.com/76zW7PT.jpg");
     background-size: cover;
     font-size: 16px;
-    font-family: Dosis;
     font-style: normal;
     font-weight: 300;
     background-color: #000;
+    font-family: 'Open Sans', sans-serif;
+
     
 }
 
-h1 {
+header {
 
-	font-size: 5em;
+	font-size: 2em;
+	font-family: 'Source Sans Pro', sans-serif;
+	text-decoration: white; 
 	
 	
 }
