--- a/unit_4 /css/style.css
+++ b/unit_4 /css/style.css
@@ -16,11 +16,10 @@ body {
     
 }
 
-header {
+h1 {
 
 	font-size: 2em;
 	font-family: 'Source Sans Pro', sans-serif;
-	text-decoration: white; 
-	
+	text-decoration: white; 	
 	
 }
