--- a/unit_4 /css/style.css
+++ b/unit_4 /css/style.css
@@ -9,17 +9,29 @@ body {
     background-size: cover;
     font-size: 16px;
     font-style: normal;
-    font-weight: 300;
-    background-color: #000;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #ffffff; 
+    text-align: center;
 
-    
+   
 }
 
 h1 {
 
-	font-size: 2em;
-	font-family: 'Source Sans Pro', sans-serif;
-	text-decoration: white; 	
+	font-size: 1em;	
+	text-align: left;
+
 	
+}
+
+nav a { 
+	font-size: 1.5em;
+	color: inherit; 
+	text-decoration: none; 
+	margin-right: 3em
+	text-transform: uppercase;
+
+
+
+	 
 }
