--- a/unit_4 /css/style.css
+++ b/unit_4 /css/style.css
@@ -12,6 +12,7 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     color: #ffffff; 
     text-align: center;
+    font-weight: 100px 
 
    
 }
@@ -27,11 +28,9 @@ h1 {
 nav a { 
 	font-size: 1.5em;
 	color: inherit; 
+	padding:0 32;
 	text-decoration: none; 
-	margin-right: 3em
+	margin-right: 0 40px 
 	text-transform: uppercase;
-
-
-
 	 
 }
