--- a/unit_4 /css/style.css
+++ b/unit_4 /css/style.css
@@ -12,17 +12,19 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     color: #ffffff; 
     text-align: center;
-    font-weight: 100px 
+    font-weight: 50px 
 
    
 }
 
 h1 {
 
-	font-size: 1em;	
-	text-align: left;
+
+	font-size: 4em;	
+	text-align: center;
 
 	
+
 }
 
 nav a { 
@@ -32,5 +34,8 @@ nav a {
 	text-decoration: none; 
 	margin-right: 0 40px 
 	text-transform: uppercase;
+	text-align: right;
+	
+	
 	 
 }
